--- a/glide.yaml
+++ b/glide.yaml
@@ -34,3 +34,12 @@ import:
   version: v0.2.0
 - package: gopkg.in/tylerb/graceful.v1
   version: v1.2.15
+- package: gopkg.in/yaml.v2
+- package: github.com/sirupsen/logrus
+  version: v1.0.0
+- package: github.com/julienschmidt/httprouter
+  version: v1.1
+- package: gopkg.in/gemnasium/logrus-airbrake-hook.v2
+  version: v2.1.2
+- package: gopkg.in/airbrake/gobrake.v2
+  version: v3.0.1
