--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:18.04
 
-ENV APP_VERSION=4.4.0
+ENV APP_VERSION=5.9.0
 ENV PATH="/mattermost-push-proxy/bin:${PATH}"
 
 # Install some needed packages
@@ -14,7 +14,7 @@ RUN apt-get update \
 
 RUN mkdir -p /mattermost-push-proxy \
     && cd /mattermost-push-proxy \
-    && wget https://github.com/mattermost/mattermost-push-proxy/releases/download/v`echo $APP_VERSION | cut -d. -f1,2`/mattermost-push-proxy-$APP_VERSION.tar.gz \
+    && wget https://github.com/mattermost/mattermost-push-proxy/releases/download/v$APP_VERSION/mattermost-push-proxy-$APP_VERSION.tar.gz \
     && tar -xvzf mattermost-push-proxy-$APP_VERSION.tar.gz \
     && rm mattermost-push-proxy-$APP_VERSION.tar.gz \
     && mv mattermost-push-proxy/* ./ \
