Don't need the context on a fork

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ workflows:
             branches:
               ignore: /.*/
       - publish-github-release:
-          context: matterbuild-github-token
+          # context: matterbuild-github-token
           requires:
             - build
           filters:
@@ -106,7 +106,7 @@ workflows:
             branches:
               ignore: /.*/
       - push-docker:
-          context: matterbuild-docker
+          # context: matterbuild-docker
           requires:
             - publish-github-release
           filters:
