--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ workflows:
             branches:
               ignore: /.*/
       - publish-github-release:
-          # context: matterbuild-github-token
+          context: matterbuild-github-token
           requires:
             - build
           filters:
@@ -107,7 +107,7 @@ workflows:
             branches:
               ignore: /.*/
       - push-docker:
-          # context: matterbuild-docker
+          context: matterbuild-docker
           requires:
             - publish-github-release
           filters:
