Drop Alpine version to 3.10 so all future dot builds of 3.10 are used. Also remove the tag from the push command so all tags are pushed at the sametime

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,7 @@ jobs:
           cd docker
           docker build --rm --no-cache -t jaydeland/mattermost-push-proxy:latest -t jaydeland/mattermost-push-proxy:$TAG .
           echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-          docker push jaydeland/mattermost-push-proxy:$TAG
-          docker push jaydeland/mattermost-push-proxy:latest
+          docker push jaydeland/mattermost-push-proxy
 
 workflows:
   version: 2
