--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ ENV PATH="/mattermost-push-proxy/bin:${PATH}"
 # Install some needed packages
 RUN apk update \
     && apk add \
-      libc6-compat
+      libc6-compat \
       netcat-openbsd \
       ca-certificates \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*.deb /var/cache/apt/archives/partial/*.deb /var/cache/apt/*.bin
