--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,9 +60,9 @@ jobs:
           fi
           APP_VERSION=$TAG
           cd docker
-          docker build --rm --no-cache -t mattermost/mattermost-push-proxy:$TAG .
+          docker build --rm --no-cache -t mattermost/mattermost-push-proxy:latest -t mattermost/mattermost-push-proxy:$TAG .
           echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-          docker push mattermost/mattermost-push-proxy:$TAG
+          docker push mattermost/mattermost-push-proxy
 
 workflows:
   version: 2
