--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,11 @@ jobs:
       name: default
     steps:
       - checkout
-      - run: make check-style
+      - run:
+          command: |
+            echo "Installing golangci-lint"
+            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /usr/local/bin v1.25.1
+            make golangci-lint
 
   test:
     executor:
