Add golangci-lint to the codebase (#64)
* MM-24317: Add golangci-lint to the codebase

Start off with a reasonable set of linter.

Golint is not completely used yet as there are still some things
to be taken care of. Let's keep this PR small. More changes can
be introduced gradually.

* Updated build image to use mattermost-server

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   default:
     working_directory: /go/src/github.com/mattermost/mattermost-push-proxy
     docker:
-      - image: circleci/golang:1.13
+      - image: mattermost/mattermost-build-server:20200322_golang-1.14.1
 
 jobs:
   lint:
@@ -15,7 +15,11 @@ jobs:
       name: default
     steps:
       - checkout
-      - run: make check-style
+      - run:
+          command: |
+            echo "Installing golangci-lint"
+            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /usr/local/bin v1.25.1
+            make golangci-lint
 
   test:
     executor:
