--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,31 @@
-FROM alpine:3.10
+FROM alpine:3.11 AS downloader
 
-ENV APP_VERSION=5.9.0
-ENV PATH="/mattermost-push-proxy/bin:${PATH}"
+ARG MM_PROXY_PACKAGE=https://github.com/mattermost/mattermost-push-proxy/releases/download/v5.21/mattermost-push-proxy.tar.gz
 
-# Install some needed packages
-RUN apk add --no-cache\
-      netcat-openbsd \
-      ca-certificates
+RUN apk add --no-cache \
+    ca-certificates \
+    libc6-compat \
+    libffi-dev \
+    linux-headers \
+    netcat-openbsd \
+    tzdata \
+    && rm -rf /tmp/* \
+    && mkdir -p /mattermost-push-proxy \
+    && wget $MM_PROXY_PACKAGE \
+    && tar -xzvf mattermost-push-proxy.tar.gz \
+    && rm mattermost-push-proxy.tar.gz \
+    && chown -R nobody:nogroup /mattermost-push-proxy
 
-RUN mkdir -p /mattermost-push-proxy \
-    && cd /mattermost-push-proxy \
-    && wget https://github.com/mattermost/mattermost-push-proxy/releases/download/v$APP_VERSION/mattermost-push-proxy-$APP_VERSION.tar.gz \
-    && tar -xvzf mattermost-push-proxy-$APP_VERSION.tar.gz \
-    && rm mattermost-push-proxy-$APP_VERSION.tar.gz \
-    && mv mattermost-push-proxy/* ./ \
-    && rm -rf mattermost-push-proxy
+USER nobody
 
 WORKDIR /mattermost-push-proxy
 
-COPY entrypoint.sh /
+ENV PUSH_PROXY=/mattermost-push-proxy/bin/mattermost-push-proxy
+
+COPY entrypoint /usr/local/bin/
 
 EXPOSE 8066
 
-VOLUME ["/mattermost-push-proxy", "/config", "/certs"]
+VOLUME ["/mattermost-push-proxy/config", "/mattermost-push-proxy/certs"]
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/entrypoint"]
