--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,10 +106,10 @@ workflows:
     jobs:
       - lint
       - check-dependencies
-      - test
-        requires:
-          - lint
-          - check-dependencies
+      - test:
+          requires:
+            - lint
+            - check-dependencies
   tagged-build:
     jobs:
       - lint:
