--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ certs
 node_modules
 # Swagger output file
 index.html
+
+# Ignore config.json
+cmd/renew_apple_cert/convert_cert/config.json
+cmd/renew_apple_cert/create_csr/config.json
