--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,11 @@ tags
 # Certificates
 *.pem
 *.cer
+*.p8
 *.p12
+*.key
+certs
+*.env
 
 # Ignore binary
 /mattermost-push-proxy
@@ -51,3 +55,7 @@ tags
 node_modules
 # Swagger output file
 index.html
+
+# Ignore config.json
+cmd/renew_apple_cert/convert_cert/config.json
+cmd/renew_apple_cert/create_csr/config.json
