update go to 1.17

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   default:
     working_directory: /go/src/github.com/mattermost/mattermost-push-proxy
     docker:
-      - image: mattermost/mattermost-build-server:20200731_golang-1.14.6
+      - image: cimg/go:1.17
 
 jobs:
   lint:
