--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  aws-s3: circleci/aws-s3@1.0.11
+  aws-s3: circleci/aws-s3@3.0.0
 
 executors:
   default:
@@ -11,15 +11,12 @@ executors:
 
 jobs:
   lint:
-    executor:
-      name: default
+    docker:
+      - image: golangci/golangci-lint:v1.42.1
     steps:
       - checkout
       - run:
-          command: |
-            echo "Installing golangci-lint"
-            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /usr/local/bin v1.25.1
-            make golangci-lint
+          command: make golangci-lint
 
   check-dependencies:
     executor:
