--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 executors:
   default:
-    working_directory: /go/src/github.com/mattermost/mattermost-push-proxy
+    working_directory: ~/go/src/github.com/mattermost/mattermost-push-proxy
     docker:
       - image: cimg/go:1.17
 
@@ -44,22 +44,24 @@ jobs:
       - run: make package
       - persist_to_workspace:
           root: .
-          paths: ./dist/mattermost-push-proxy.tar.gz
+          paths:
+            - ./dist/mattermost-push-proxy-linux-amd64.tar.gz
+            - ./dist/mattermost-push-proxy-linux-arm64.tar.gz
 
   publish-github-release:
     docker:
-      - image: cibuilds/github:0.12
+      - image: cibuilds/github:0.13
     steps:
       - attach_workspace:
           at: .
       - run:
           name: "Publish Release on GitHub"
           command: |
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} ./dist/mattermost-push-proxy.tar.gz
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} ./dist/
 
   publish-release-s3:
     docker:
-    - image: 'circleci/python:2.7'
+    - image: cimg/python:3.6
     steps:
       - attach_workspace:
           at: .
@@ -71,16 +73,17 @@ jobs:
             exit 1
           fi
       - aws-s3/copy:
-          from: ./dist/mattermost-push-proxy.tar.gz
+          from: ./dist/
           to: s3://releases.mattermost.com/mattermost-push-proxy/$CIRCLE_TAG/
-          arguments: --acl public-read --cache-control "no-cache"
+          arguments: --acl public-read --cache-control "no-cache" --recursive
 
   push-docker:
     docker:
-      - image: circleci/buildpack-deps:stable
+      - image: cimg/base:stable
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.9
       - run: |
           set -e
           set -u
@@ -91,11 +94,9 @@ jobs:
             echo "Pushing release $CIRCLE_TAG..."
             TAG="${CIRCLE_TAG//v}"
           fi
-          MM_PROXY_PACKAGE=https://github.com/mattermost/mattermost-push-proxy/releases/download/$CIRCLE_TAG/mattermost-push-proxy.tar.gz
-          cd docker
-          docker build --rm --no-cache --build-arg MM_PROXY_PACKAGE=$MM_PROXY_PACKAGE -t mattermost/mattermost-push-proxy:latest -t mattermost/mattermost-push-proxy:$TAG .
+          MM_PROXY_PACKAGE=https://github.com/mattermost/mattermost-push-proxy/releases/download/$CIRCLE_TAG
           echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-          docker push mattermost/mattermost-push-proxy
+          make manifest
 
 workflows:
   version: 2
