--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,22 @@
 version: 2.1
 
 orbs:
-  aws-s3: circleci/aws-s3@1.0.11
+  aws-s3: circleci/aws-s3@3.0.0
 
 executors:
   default:
-    working_directory: /go/src/github.com/mattermost/mattermost-push-proxy
+    working_directory: ~/go/src/github.com/mattermost/mattermost-push-proxy
     docker:
-      - image: mattermost/mattermost-build-server:20200731_golang-1.14.6
+      - image: cimg/go:1.17
 
 jobs:
   lint:
-    executor:
-      name: default
+    docker:
+      - image: golangci/golangci-lint:v1.42.1
     steps:
       - checkout
       - run:
-          command: |
-            echo "Installing golangci-lint"
-            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /usr/local/bin v1.25.1
-            make golangci-lint
+          command: make golangci-lint
 
   check-dependencies:
     executor:
@@ -43,26 +40,29 @@ jobs:
       name: default
     steps:
       - checkout
-      - run: make build-server
       - run: make package
       - persist_to_workspace:
           root: .
-          paths: ./dist/mattermost-push-proxy.tar.gz
+          paths:
+            - ./dist/mattermost-push-proxy-linux-amd64.tar.gz
+            - ./dist/mattermost-push-proxy-linux-arm64.tar.gz
+      - store_artifacts:
+          path: ./dist/
 
   publish-github-release:
     docker:
-      - image: cibuilds/github:0.12
+      - image: cibuilds/github:0.13
     steps:
       - attach_workspace:
           at: .
       - run:
           name: "Publish Release on GitHub"
           command: |
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} ./dist/mattermost-push-proxy.tar.gz
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} ./dist/
 
   publish-release-s3:
     docker:
-    - image: 'circleci/python:2.7'
+    - image: cimg/python:3.6
     steps:
       - attach_workspace:
           at: .
@@ -74,16 +74,34 @@ jobs:
             exit 1
           fi
       - aws-s3/copy:
-          from: ./dist/mattermost-push-proxy.tar.gz
+          from: ./dist/
           to: s3://releases.mattermost.com/mattermost-push-proxy/$CIRCLE_TAG/
-          arguments: --acl public-read --cache-control "no-cache"
+          arguments: --acl public-read --cache-control "no-cache" --recursive
+
+  build-image:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+      - run: |
+          set -e
+          set -u
+          TAG=dirty make container
+      - run:
+          name: Test image
+          command: |
+            docker run docker.io/mattermost/mattermost-push-proxy-amd64:dirty --version
+            docker run --platform linux/arm64 docker.io/mattermost/mattermost-push-proxy-arm64:dirty --version
 
   push-docker:
     docker:
-      - image: circleci/buildpack-deps:stable
+      - image: cimg/base:stable
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.7
       - run: |
           set -e
           set -u
@@ -92,13 +110,9 @@ jobs:
             exit 1
           else
             echo "Pushing release $CIRCLE_TAG..."
-            TAG="${CIRCLE_TAG//v}"
+            echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
+            TAG="${CIRCLE_TAG//v}" make manifest
           fi
-          MM_PROXY_PACKAGE=https://github.com/mattermost/mattermost-push-proxy/releases/download/$CIRCLE_TAG/mattermost-push-proxy.tar.gz
-          cd docker
-          docker build --rm --no-cache --build-arg MM_PROXY_PACKAGE=$MM_PROXY_PACKAGE -t mattermost/mattermost-push-proxy:latest -t mattermost/mattermost-push-proxy:$TAG .
-          echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
-          docker push mattermost/mattermost-push-proxy
 
 workflows:
   version: 2
@@ -110,6 +124,7 @@ workflows:
           requires:
             - lint
             - check-dependencies
+      - build-image
   tagged-build:
     jobs:
       - lint:
