--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,12 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Install Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.17.x
+        go-version: 1.20.7
 
     - name: check dependencies
       run: make check-deps
@@ -36,24 +36,3 @@ jobs:
         path: |
           ./dist/*.tar.gz
           ./dist/checksums.txt
-
-  image:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build image
-      run: TAG=dirty make container
-
-    - name: Test image
-      run: |
-        docker run docker.io/mattermost/mattermost-push-proxy-amd64:dirty --version
-        docker run --platform linux/arm64 docker.io/mattermost/mattermost-push-proxy-arm64:dirty --version
