Improve some more code
- Error handling of json responses
- Removed old pattern of FromJSON/ToJson functions.
- Return structs, accept interfaces.
- Added the config file to .gitignore for easier
development.

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ node_modules
 # Swagger output file
 index.html
 
+config/mattermost-push-proxy.json
 # Ignore config.json
 cmd/renew_apple_cert/convert_cert/config/**
 cmd/renew_apple_cert/convert_cert/config.json
