feat: Enable multiarchitecture builds (#115)
* feat: Enable multiarchitecture builds

* fix: Upgrade hadolint and fix latest docker push on Makefile

* fix: Add docker-login target before docker push

* fix: Add missing APP_COMMIT and remove docker-login target from docker push

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,15 @@
-FROM ubuntu:jammy@sha256:f9d633ff6640178c2d0525017174a688e2c1aef28f0a0130b26bd5554491f0da AS TMP
+FROM --platform=${TARGETPLATFORM} ubuntu:jammy-20240212 AS builder
+ARG TARGETARCH
 
 # Setting bash as our shell, and enabling pipefail option
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Copying binaries
+# Copying tarball
 WORKDIR /mattermost-push-proxy
-COPY dist/ dist/
-COPY docker/entrypoint .
-ARG ARCH
-COPY bin/mattermost-push-proxy-linux-$ARCH bin/mattermost-push-proxy
+COPY dist/mattermost-push-proxy-linux-${TARGETARCH}.tar.gz /mattermost-push-proxy-linux.tar.gz
+RUN tar -xf /mattermost-push-proxy-linux.tar.gz --strip-components=1  -C /mattermost-push-proxy
 
-#Using multi stage build
-FROM ubuntu:jammy@sha256:f9d633ff6640178c2d0525017174a688e2c1aef28f0a0130b26bd5554491f0da
+FROM --platform=${TARGETPLATFORM} ubuntu:jammy-20240212
 
 # Install needed packages and indirect dependencies
 # hadolint ignore=DL3008
@@ -21,18 +19,19 @@ RUN apt-get update \
   libffi-dev \
   netcat-openbsd \
   tzdata \
-  && rm -rf /var/lib/apt/lists/* \
-  && mkdir -p mattermost-push-proxy/bin \
-  && chown -R nobody:nogroup /mattermost-push-proxy
+  && rm -rf /var/lib/apt/lists/*
 
 # Coyping needed files from previous stage
-COPY --from=TMP /mattermost-push-proxy/dist /
-COPY --from=TMP /mattermost-push-proxy/bin/ /mattermost-push-proxy/bin/
-COPY --from=TMP /mattermost-push-proxy/entrypoint /usr/local/bin/
+COPY --from=builder /mattermost-push-proxy/ /mattermost-push-proxy/
+COPY docker/entrypoint /usr/local/bin/
+
+RUN chown -R nobody:nogroup /mattermost-push-proxy
 
 USER nobody
 WORKDIR /mattermost-push-proxy
 ENV PUSH_PROXY=/mattermost-push-proxy/bin/mattermost-push-proxy
+
 EXPOSE 8066
 VOLUME ["/mattermost-push-proxy/config", "/mattermost-push-proxy/certs"]
+
 ENTRYPOINT ["/usr/local/bin/entrypoint"]
