--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,16 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint,test]
+    needs: [lint, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
         with:
           fetch-depth: 0
+      - uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+
       - name: Build
-        run: make build
+        run: make docker-push
       - name: Cleanup
         run: make clean
   package:
