Fork PRs: do not push the docker image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           fetch-depth: 0
       - uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        if: github.repository_owner == 'mattermost'
         with:
           ecr: false
           username: matterbuild
@@ -54,6 +55,7 @@ jobs:
         run: make package
 
       - name: Build
+        if: github.repository_owner == 'mattermost'
         run: make docker-push
 
       - name: Cleanup
