--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,36 +41,6 @@ jobs:
       - name: Test
         run: make test
 
-  fips-lint:
-    name: FIPS Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-        with:
-          fetch-depth: 0
-      - name: Setup Go
-        uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
-        with:
-          go-version: "${{ env.GO_VERSION }}"
-      - name: FIPS Lint
-        run: make go-lint
-
-  fips-test:
-    name: FIPS Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-        with:
-          fetch-depth: 0
-      - name: Setup Go
-        uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
-        with:
-          go-version: "${{ env.GO_VERSION }}"
-      - name: FIPS Test
-        run: make go-test
-
   build-amd64:
     name: Build AMD64
     runs-on: ubuntu-latest
@@ -100,7 +70,7 @@ jobs:
   fips-build-amd64:
     name: FIPS Build AMD64
     runs-on: ubuntu-latest
-    needs: [fips-lint, fips-test]
+    needs: [lint, test]
     timeout-minutes: 30
     permissions:
       contents: read
@@ -122,7 +92,7 @@ jobs:
   fips-build-arm64:
     name: FIPS Build ARM64
     runs-on: ubuntu-24.04-arm
-    needs: [fips-lint, fips-test]
+    needs: [lint, test]
     timeout-minutes: 30
     permissions:
       contents: read
