--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
     name: Build AMD64
     runs-on: ubuntu-latest
     needs: [lint, test]
+    if: github.actor != 'dependabot[bot]'
     timeout-minutes: 30
     steps:
       - name: Checkout code
@@ -58,6 +59,7 @@ jobs:
     name: Build ARM64
     runs-on: ubuntu-24.04-arm
     needs: [lint, test]
+    if: github.actor != 'dependabot[bot]'
     timeout-minutes: 30
     steps:
       - name: Checkout code
@@ -71,6 +73,7 @@ jobs:
     name: FIPS Build AMD64
     runs-on: ubuntu-latest
     needs: [lint, test]
+    if: github.actor != 'dependabot[bot]'
     timeout-minutes: 30
     permissions:
       contents: read
@@ -93,6 +96,7 @@ jobs:
     name: FIPS Build ARM64
     runs-on: ubuntu-24.04-arm
     needs: [lint, test]
+    if: github.actor != 'dependabot[bot]'
     timeout-minutes: 30
     permissions:
       contents: read
@@ -115,6 +119,7 @@ jobs:
     name: FIPS Security Scan
     runs-on: ubuntu-latest
     needs: [fips-build-amd64, fips-build-arm64]
+    if: github.actor != 'dependabot[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
@@ -139,6 +144,7 @@ jobs:
     name: Security Scan
     runs-on: ubuntu-latest
     needs: [build-amd64, build-arm64]
+    if: github.actor != 'dependabot[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
@@ -158,7 +164,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [security-scan]
-    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v'))
+    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
       id-token: write
@@ -187,7 +193,7 @@ jobs:
     name: FIPS Deploy
     runs-on: ubuntu-latest
     needs: [fips-security-scan]
-    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v'))
+    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
       id-token: write
